# Annotator

./: .gitattributes  .gitignore  AST_Annotator.py  AST_report.csv  Conditional_report.csv  RightTyper_report.csv  Taskfile.yml  cli_AST_report.txt  conditional_annotator.py  final_annotation_report.csv  generate_csv.py  pyproject.toml  task_manager_AST_report.txt  var_annotator.py  variable_annotation_report.csv  variable_annotator.py
RightTyper/: righttyper.out
RightTyper/righttyper-env/: pyvenv.cfg
annotation_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
